--- a/OzricUI/Components/GraphNodeComponent.razor
+++ b/OzricUI/Components/GraphNodeComponent.razor
@@ -12,6 +12,15 @@
             </PortRenderer>
         </div>
     }
+    /*
+    @if (Node is VariableInputsModel vim)
+    {
+        <div class="input-port">
+            <PortRenderer Port="@vim.plus" Class="input-port">
+                <img src="icons/@(vim.plus.valueType).png" width="16" height="16" />
+            </PortRenderer>
+        </div>
+    }
 </div>
 
 @code {
