--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -1,7 +1,6 @@
 ﻿@using OzricUI.Data
 @using OzricEngine
-@using OzricEngine.logic
-@using OzricEngine.nodes
+@using OzricEngine.Nodes
 @using OzricService
 @using OzricUI.Components 
 @using OzricUI.Model
