--- a/OzricUI/Components/EntityDialog.razor
+++ b/OzricUI/Components/EntityDialog.razor
@@ -1,5 +1,5 @@
 @using OzricUI.Model
-@using OzricEngine.logic
+@using OzricEngine.Nodes
 @using OzricService
 @inject IEngineService EngineService
 
