--- a/OzricUI/Components/LightDialog.razor
+++ b/OzricUI/Components/LightDialog.razor
@@ -1,5 +1,5 @@
 @using OzricUI.Model
-@using OzricEngine.logic
+@using OzricEngine.Nodes
 @using OzricService
 @using OzricEngine.ext
 @using OzricEngine.Values
